jpetstore/jpetstoredb-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: jpetstoredb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jpetstoredb
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: jpetstoredb
        image: <REGISTRY NAMESPACE>/jpetstoredb
        ports:
        - containerPort: 3306
