jpetstore/jpetstoreweb-loadbarancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  selector:
    app: jpetstoreweb
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
