jpetstore/jpetstoreweb-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  selector:
    app: jpetstoreweb
  type: NodePort
  ports:
  - port: 80
    targetPort: 9080
