jpetstore/jpetstoreweb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  selector:
    app: jpetstoreweb
  ports:
  - port: 80
    targetPort: 9080
